--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -190,3 +190,12 @@
   year={2002},
   publisher={Tata McGraw-Hill Education}
 }
+
+@inproceedings{zhang2001video,
+  title={Video watermark technique in motion vector},
+  author={Zhang, Jun and Li, Jiegu and Zhang, Ling},
+  booktitle={Computer Graphics and Image Processing, Proceedings of XIV Brazilian Symposium on},
+  pages={179--182},
+  year={2001},
+  organization={IEEE}
+}
